stylesheets/styles.css
html, body {
  height: 100%; /* sticky footer */
  margin: 0 auto;
  position: relative;
  text-align: center;
  width: 800px;
}

.wrap {
  min-height: 100%; /* sticky footer */
}

.main {
  overflow:auto;
  padding-bottom: 50px;}  /* must be same height as the footer -- sticky footer */
}

.main_logo {
  margin: 0 auto;
  padding: 50px 0 15px 0;
  position: relative;
  text-align: center;
}

.beast-wrap {
  margin-top: 50px;
  width: 800px;
}

#beast_1 {
  position: absolute;
  left: -100px;
}

#beast_2 {
  position: absolute;
  left: 230px;
}

#beast_3 {
  position: absolute;
  right: -110px;
}

.footer {
  clear:both;  /* sticky footer */
  height: 50px; /* sticky footer */
  margin-top: -50px; /* negative value of footer height sticky footer */
  position: relative; /* sticky footer */
  width: 100%;

  color: #d3d3d3;
  font-family: sans-serif;
  text-transform: uppercase;
  letter-spacing: 4px
}

